fix on tablet part of footer scss

--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -113,6 +113,7 @@
     }
     &__contact-box {
       align-self: flex-start;
+      padding-bottom: 91px;
     }
     &__line {
       bottom: 73px;
